Fixed dark mode

--- a/static/main.css
+++ b/static/main.css
@@ -3,6 +3,27 @@
 @import url('https://fonts.googleapis.com/css?family=DM+Sans');
 
 
+@font-face {
+    font-family: 'Manrope';
+    src: url('Manrope-VariableFont_wght.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'DM Sans';
+    src: url('DMSans-Regular.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    src: url('Montserrat-VariableFont_wght.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
 *, *::before, *::after{
     box-sizing: border-box;
 }
